# farm_car

./: .gitignore  README.md  mavros.sh  rc_receiver_config.json
control_motor/: package.xml  setup.py
control_motor/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
control_motor/config/log/: latest_build
control_motor/control_motor/: Twist2Speed.py  control_dual.py  msg_choose.py  rc_receiver.py
control_motor/control_motor/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
control_motor/control_motor/log/: latest_build
control_motor/launch/: control_dual_launch.py
docker/jetson/: build.sh  dockerfile  model  run.sh
docker/ubuntu/: dockerfile  run.sh
dynamixel_sdk/: CMakeLists.txt
dynamixel_sdk_custom_interfaces/: CMakeLists.txt
dynamixel_sdk_custom_interfaces/msg/: SetVelocityDual.msg
dynamixel_sdk_examples/src/: read_write_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
motor_controller/control_motor/: setup.py
motor_controller/control_motor/control_motor/: Twist2Speed.py  motor_speed_transform.py  motorspeed.py  msg_choose.py  rc_receiver.py
motor_controller/control_motor/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
motor_controller/control_motor/launch/: control_dual_launch.py
motor_controller/control_motor/log/: latest_build
motor_controller/dynamixel_sdk_custom_interfaces/: CMakeLists.txt
motor_controller/dynamixel_sdk_custom_interfaces/msg/: SetVelocityDual.msg
src/: rc_receiver_config.json
src/camera/: setup.py
src/camera/camera/: realsense.py
src/controller/: package.xml  setup.py
src/controller/controller/: follower.py  motor_controller.py
src/motor_control/motor/: package.xml  setup.py
src/motor_control/motor_if/: CMakeLists.txt  package.xml
src/motor_control/rc_receiver/: setup.py
src/motor_control/rc_receiver_if/: CMakeLists.txt
src/obs_filiter/: CMakeLists.txt
src/obs_filiter/src/: depth_cal.txt  obstacle_detector.cpp  plane.cpp  realsense_read.cpp  realsense_view.rviz  xz_visualizer_node.cpp
src/obstacle_detect_last/obstacle_detect_last/: obs_detect.py
src/path_planner/: package.xml  setup.py
src/path_planner/path_planner/: dwa.py
src/pixhawk_control/: package.xml  setup.cfg  setup.py
src/pixhawk_control/pixhawk_control/: rc_receive.py  (+2 more)
src/track/: setup.py
src/ultrasonic/: setup.py
src/uwb/: setup.py
src/uwb_nls/: error.py  package.xml  setup.cfg  setup.py
src/visualization/: package.xml  setup.py
(+231 files in other folders)
